modify history api
